# learn_rag

./: .env.sample  .gitignore  00_rag_experiment.ipynb  01_rag_Error Analysis and Evaluation.ipynb  02_rag_optimization.ipynb  config.py  milvus_demo.db  pyproject.toml
datasets/: optimized_rag_evaluation.csv  rag_evaluation_results.csv  rag_results.csv  synthetic_queries_with_gt.csv
logs/: optimized_rag_evaluation_results.csv  optimized_rag_logs.jsonl  rag_logs.jsonl
