[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "flashrank>=0.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pymilvus[milvus-lite]>=2.6.6",
    "ragas>=0.4.2",
]
